# ocaml-boxroot

./: .gitignore  .gitlab-ci.yml  Changes.md  Makefile  README.md  bench.ods
benchmarks/: dune  globroots.ml  local_roots.ml  local_roots_gen_boxroot.h  local_roots_stubs.c  par_perm_count.ml  perm_count.ml  synthetic.ml
benchmarks/lib-ref/: bitmap_boxroot.c  bitmap_boxroot_ref.ml  boxroot_ref.ml  config.ml  dll_boxroot_ref.ml  dune  rem_boxroot_ref.ml  time.c  time.ml
boxroot/: bitmap_boxroot.c  bitmap_boxroot.h  boxroot.c  boxroot.h  dll_boxroot.c  dune  ocaml_hooks.c  ocaml_hooks.h  platform.c  platform.h  rem_boxroot.c
rust/ocaml-boxroot-sys/: Cargo.toml  build.rs
rust/ocaml-boxroot-sys/src/: lib.rs
