(executable
;  (flags (:standard -runtime-variant d))
  (name perm_count)
  (libraries unix ref choice)
  (modules perm_count)
)

(executable
;  (flags (:standard -runtime-variant d))
  (name par_perm_count)
  (libraries unix domain_shims ref choice)
  (modules par_perm_count)
)

(executable
;  (flags (:standard -runtime-variant d))
  (name synthetic)
  (libraries unix ref)
  (modules synthetic)
)

(executable
;  (flags (:standard -runtime-variant d))
  (name globroots)
  (libraries unix ref)
  (modules globroots)
)

(executable
;  (flags (:standard -runtime-variant d))
  (name local_roots)
  (libraries unix)
  (foreign_archives
     ../boxroot/boxroot
  )
  (foreign_stubs (language c)
    (extra_deps
      ../boxroot/boxroot.h
      ../boxroot/dll_boxroot.h
      ../boxroot/rem_boxroot.h
      ../boxroot/ocaml_hooks.h
      ../boxroot/platform.h
    )
    (flags -DENABLE_BOXROOT_MUTEX=%{env:ENABLE_BOXROOT_MUTEX=0}
        -DBOXROOT_DEBUG=%{env:BOXROOT_DEBUG=0}
        -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wsign-compare
        -O2 -fno-strict-aliasing)
    (names local_roots_stubs)
  )
  (modules local_roots)
)
